RESOLVED FIXED155708
Web Inspector search icon does not fit when zoomed in.
https://bugs.webkit.org/show_bug.cgi?id=155708
Summary Web Inspector search icon does not fit when zoomed in.
alan
Reported 2016-03-20 20:28:26 PDT
1. Focus Web Inspector 2. Press cmd+ few times to zoom in
Attachments
search icon zoomed in - trunk (31.37 KB, image/png)
2016-03-20 20:33 PDT, alan
no flags
search icon zoomed in - with the fix (33.93 KB, image/png)
2016-03-20 20:34 PDT, alan
no flags
Patch (36.08 KB, patch)
2016-03-20 20:35 PDT, alan
no flags
Patch (35.86 KB, patch)
2016-03-21 12:10 PDT, alan
no flags
alan
Comment 1 2016-03-20 20:28:46 PDT
alan
Comment 2 2016-03-20 20:33:34 PDT
Created attachment 274564 [details] search icon zoomed in - trunk
alan
Comment 3 2016-03-20 20:34:03 PDT
Created attachment 274565 [details] search icon zoomed in - with the fix
alan
Comment 4 2016-03-20 20:35:38 PDT
Simon Fraser (smfr)
Comment 5 2016-03-21 10:19:26 PDT
Comment on attachment 274566 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=274566&action=review > Source/WebCore/rendering/RenderThemeMac.mm:1822 > + IntSize resultButtonSizeBasedOnFontSize = sizeForSystemFont(box.style(), resultsButtonSizes()); resultButtonSizeBasedOnFontSize is a bit long-winded. > Source/WebCore/rendering/RenderThemeMac.mm:1825 > + if (!diff.width() && !diff.height()) Don't we have an isZero?
alan
Comment 6 2016-03-21 12:10:03 PDT
WebKit Commit Bot
Comment 7 2016-03-21 13:13:28 PDT
Comment on attachment 274615 [details] Patch Clearing flags on attachment: 274615 Committed r198497: <http://trac.webkit.org/changeset/198497>
WebKit Commit Bot
Comment 8 2016-03-21 13:13:32 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.