Web Inspector search icon does not fit when zoomed in. https://bugs.webkit.org/show_bug.cgi?id=155708

Reviewed by Simon Fraser.

Adjusts the paint rect for the magnifier icon so that it fits even when zoomed in.

Source/WebCore:

Covered by existing tests.

* rendering/RenderThemeMac.mm:
(WebCore::RenderThemeMac::resultsButtonSizes):
(WebCore::RenderThemeMac::paintSearchFieldResultsButton):

LayoutTests:

* fast/forms/search/search-padding-cancel-results-buttons-expected.txt:
* platform/mac/fast/css/focus-ring-exists-for-search-field-expected.txt:
* platform/mac/fast/css/text-input-with-webkit-border-radius-expected.txt:
* platform/mac/fast/css/text-overflow-input-expected.txt:
* platform/mac/fast/forms/box-shadow-override-expected.txt:
* platform/mac/fast/forms/control-restrict-line-height-expected.txt:
* platform/mac/fast/forms/input-appearance-height-expected.txt:
* platform/mac/fast/forms/placeholder-position-expected.txt:
* platform/mac/fast/forms/placeholder-pseudo-style-expected.txt:
* platform/mac/fast/forms/search-cancel-button-style-sharing-expected.txt:
* platform/mac/fast/forms/search-display-none-cancel-button-expected.txt:
* platform/mac/fast/forms/search-rtl-expected.txt:
* platform/mac/fast/forms/search-styled-expected.txt:
* platform/mac/fast/forms/search-vertical-alignment-expected.txt:
* platform/mac/fast/forms/search/search-size-with-decorations-expected.txt:
* platform/mac/fast/forms/searchfield-heights-expected.txt:
* platform/mac/fast/repaint/search-field-cancel-expected.txt:
* platform/mac/fast/replaced/width100percent-searchfield-expected.txt:


Canonical link: https://commits.webkit.org/173824@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@198497 268f45cc-cd09-0410-ab3c-d52691b4dbfc